--- a/nicnbk-ui-angular2/src/app/reporting/view/tarragon.generated.form.nb.reporting.component.html
+++ b/nicnbk-ui-angular2/src/app/reporting/view/tarragon.generated.form.nb.reporting.component.html
@@ -117,14 +117,13 @@
     <div class="row withpadding">
         <div class="col-md-6">
             <div class="col-md-1 pull-left">
-                <button class="btn btn-primary" [routerLink]="['/reporting/NBReporting/NICKMFInput/', reportId]"><span class="glyphicon glyphicon-backward"></span>PREVIOUS
+                <button class="btn btn-primary" [routerLink]="['/reporting/NBReporting/NICKMFInput/', reportId]">PREVIOUS
                 </button>
             </div>
         </div>
         <div class="col-md-6">
             <div class="col-md-1 pull-right">
                 <button class="btn btn-primary" [routerLink]="['/reporting/NBReporting/previousYearInput/', reportId]" [disabled]="!showNextButton()">NEXT
-                    <span class="glyphicon glyphicon-forward"></span>
                 </button>
 
             </div>
@@ -254,14 +253,13 @@
     <div class="row">
         <div class="col-md-6">
             <div class="col-md-1 pull-left">
-                <button class="btn btn-primary" [routerLink]="['/reporting/NBReporting/NICKMFInput/', reportId]"><span class="glyphicon glyphicon-backward"></span>PREVIOUS
+                <button class="btn btn-primary" [routerLink]="['/reporting/NBReporting/NICKMFInput/', reportId]">PREVIOUS
                 </button>
             </div>
         </div>
         <div class="col-md-6">
             <div class="col-md-1 pull-right">
-                <button class="btn btn-primary" [routerLink]="['/reporting/NBReporting/previousYearInput/', reportId]" [disabled]="!showNextButton()">NEXT
-                    <span class="glyphicon glyphicon-forward"></span></button>
+                <button class="btn btn-primary" [routerLink]="['/reporting/NBReporting/previousYearInput/', reportId]" [disabled]="!showNextButton()">NEXT</button>
             </div>
         </div>
     </div>
