NB Reporting: 1) editing lookups 2) currency rate load from NBRK job

--- a/nicnbk-ui-angular2/src/app/app.component.html
+++ b/nicnbk-ui-angular2/src/app/app.component.html
@@ -141,6 +141,7 @@
                         <li><a [routerLink]="['/reporting/NBReporting']">NB Reports</a></li>
                         <!--<li role="separator" class="divider"></li>-->
                         <li><a [routerLink]="['/reporting/NBReporting/reserveCalculation']">Capital Calls</a></li>
+                        <li><a [routerLink]="['/reporting/NBReporting/lookupValues']">Lookup Values</a></li>
 
                     </ul>
                 </li>
