M2S2 - loading lookups with ForkJoin

--- a/nicnbk-ui-angular2/src/app/m2s2/view/pe-memo-edit.component.html
+++ b/nicnbk-ui-angular2/src/app/m2s2/view/pe-memo-edit.component.html
@@ -23,7 +23,7 @@
                 </div>
             </div>
 
-            <div [hidden]="submitted">
+            <div [hidden]="submitted" *ngIf="memo != null && memo.firm != null">
                 <form (ngSubmit)="save()" #memoForm="ngForm" class="well span">
                     <div class="jumbotron">
                         <div class="row">
