--- a/nicnbk-ui-angular2/src/app/m2s2/view/hf-memo-edit.component.html
+++ b/nicnbk-ui-angular2/src/app/m2s2/view/hf-memo-edit.component.html
@@ -21,7 +21,7 @@
                     </div>
                 </div>
             </div>
-            <div [hidden]="submitted">
+            <div [hidden]="submitted" *ngIf="memo != null && memo.manager != null">
                 <form (ngSubmit)="save()" #memoForm="ngForm" class="well span">
                     <div class="jumbotron">
                         <div class="row">
